    information via a PropertyNavigator to build full property paths and assert all leaf nodes are not a class type.
  * Added FindMatches() to find elements in one collection that have keys matching elements in another collection.
  * Added additional GetPropertyValue() and SetPropertyValue() overloads on EnumerableExtensions that accept a Type.

AllOverIt.Validation v3.0.0
  * Updated to AllOverIt v3.0.0

AllOverIt.Aws.Cdk.AppSync v2.0.0
  * Updated to AllOverIt v3.0.0
  * Now using reactive extensions in AllOverIt.Reactive v1.0.0
  * Upated to Amazon.CDK.AWS.AppSync v1.146.0

AllOverIt.Evaluator v5.0.0
  * Updated to AllOverIt v3.0.0

AllOverIt.GenericHost v4.0.0
  * Updated to AllOverIt v3.0.0
  * Added WaitForStartup() to BackgroundWorker

AllOverIt.Serialization.NewtonsoftJson v2.0.0
  * Updated to AllOverIt v3.0.0

AllOverIt.Serialization.SystemTextJson v2.0.0
  * Updated to AllOverIt v3.0.0

AllOverIt.Aws.AppSync.Client v2.0.0
  * Updated to AllOverIt v3.0.0

AllOverIt.AspNetCore v2.0.0
  * Updated to AllOverIt v3.0.0

AllOverIt.EntityFrameworkCore v2.0.0
  * Updated to AllOverIt v3.0.0

AllOverIt.Csv v3.0.0
  * Updated to AllOverIt v3.0.0

AllOverIt.Reactive v1.0.0
  * New package, adding an event bus and observable extensions


10 Feb 2022
======================================================================================================================
AllOverIt v2.10.0
  * Added support to provide filter instances to ObjectPropertyFilterRegistry.


10 Feb 2022
======================================================================================================================
AllOverIt v2.9.1
  * Updated ObjectPropertySerializer to correctly handle primitive arrays. Can also now use the combined
    AutoCollationPaths on the global and filter specific options.


10 Feb 2022
======================================================================================================================
AllOverIt v2.9.0